--- a/src/app/modules/todo/components/work/work-form/work-form.component.scss
+++ b/src/app/modules/todo/components/work/work-form/work-form.component.scss
@@ -9,6 +9,7 @@
   color: black;
   .workform__input {
     margin-bottom: 10px;
+    padding: 20px;
   }
   .workform__button {
     color: var(--white);
