--- a/src/app/modules/todo/components/work/work-item/work-item.component.scss
+++ b/src/app/modules/todo/components/work/work-item/work-item.component.scss
@@ -31,7 +31,7 @@
   }
   .workitem__progress {
     margin-bottom: 10px;
-    width: 142px;
+    width: 100%;
     mat-progress-bar {
       border-radius: 3px;
     }
