--- a/src/app/modules/todo/components/work/work-list/work-list.component.scss
+++ b/src/app/modules/todo/components/work/work-list/work-list.component.scss
@@ -1,7 +1,7 @@
 .work__list {
   color: #000;
 
-  width: 176px;
+  width: 85%;
   background-color: rgb(227, 228, 230);
   padding: 15px;
   border-radius: 5px;
